--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <section class="header">
       <a href="#"
         ><img
-          src="./assets/images/Nextensor_1_UTT_tr 1.png\"
+          src="./assets/images/Nextensor_1_UTT_tr 1.png"
           alt="Nextensor-logo"
       /></a>
       <button class="header-link">
